--- a/install
+++ b/install
@@ -68,4 +68,4 @@ sudo rm /etc/lsb-release
 sudo cp assets/lsb-release /etc
 
 
-echo "My work here is done! You dont have to reboot, but its a good idea."
+echo "My work here is done! You should probably reboot."
