--- a/install
+++ b/install
@@ -1,7 +1,6 @@
 #!/bin/bash
 
 
-currentdir=$(pwd)
 
 echo "Updating your current Artix-Runit install to the latest packages."
 sudo pacman -Syu
@@ -10,60 +9,68 @@ echo "Installing a few dependancies."
 sudo pacman -S lua feh neofetch alacritty
 
 echo "Creating /etc/mizOS"
-sudo mkdir /etc/mizOS
+if [ -d "/etc/mizOS" ]; then
+	sudo rm -rf /etc/mizOS/src/mizOS
+else
+	sudo mkdir /etc/mizOS
+fi
+sudo mkdir /etc/mizOS/src
 
 echo "Creating /etc/mizOS/wallpaper"
-sudo mkdir /etc/mizOS/wallpaper
+if [ -d "/etc/mizOS/wallpaper" ]; then
+	sudo rm -rf /etc/mizOS/wallpaper
+else
+	sudo mkdir /etc/mizOS/wallpaper
+fi
+
+
+echo "creating /etc/mizOS/src"
+sudo mkdir /etc/mizOS/src
+
 
 echo "Adding that amazing wallpaper to /etc/mizOS/wallpaper"
 sudo cp assets/mizOStree.png /etc/mizOS/wallpaper
 
-if [ -d "$HOME/Documents" ]; then
-	echo "Documents folder found."
-else
-	echo "No Documents folder, creating one."
-	mkdir $HOME/Documents
-fi
-
-
-cd $HOME/Documents
-
-if [ -d "$HOME/Documents/yay-git" ]; then
+if [ -d "/etc/mizOS/yay-git" ]; then
 	echo "yay build files found, removing"
-	rm -rf $HOME/Documents/yay-git
+	sudo rm -rf /etc/mizOS/yay-git
 fi
 
 echo "Installing yay, so you dont have to."
+cd /etc/mizOS
 git clone https://aur.archlinux.org/yay-git.git
-cd yay-git
+cd /etc/mizOS/yay-git
 makepkg -si
 
-cd $currentdir
+cd $HOME
 
 if [ -d "$HOME/.config/i3" ]; then
 	echo "You already have an i3 config folder, were backing that up to HOME/.config/youri3backup."
 	mkdir $HOME/.config/youri3backup
 	mv $HOME/.config/i3/ $HOME/.config/youri3backup
 	mkdir $HOME/.config/i3
-	cp assets/i3/config $HOME/.config/i3
+	sudo cp /etc/mizOS/src/mizOS/assets/i3/config $HOME/.config/i3
 else 
 	echo "i3-gaps is not installed on this system, were fixing that."
 	sudo pacman -S i3-gaps dmenu xclip maim
-	cp assets/i3/config $HOME/.config/i3
+	sudo cp /etc/mizOS/src/mizOS/assets/i3/config $HOME/.config/i3
 fi
 
 if test -f "$HOME/.config/picom.conf"; then
 	echo "You already have a picom config file, were backing that up to HOME/.config/yourpicombackup."
 	mkdir $HOME/.config/yourpicombackup
 	mv $HOME/.config/picom.conf $HOME/.config/yourpicombackup
-	cp assets/picom.conf $HOME/.config
+	sudo cp /etc/mizOS/src/mizOS/assets/picom.conf $HOME/.config
 else
 	echo "Picom doesnt seem to be installed, fixing that now."
 	sudo pacman -S picom
-	cp assets/picom.conf $HOME/.config
+	sudo cp /etc/mizOS/src/mizOS/assets/picom.conf $HOME/.config
 fi
 
+
+
 echo "Installing the miz script. finally!! :D"
+cd /etc/mizOS/src/mizOS
 chmod +x assets/miz
 sudo cp assets/miz /usr/bin
 
