--- a/install
+++ b/install
@@ -6,7 +6,7 @@ echo "Updating your current Artix-Runit install to the latest packages."
 sudo pacman -Syu
 
 echo "Installing a few dependancies."
-sudo pacman -S lua feh neofetch alacritty
+sudo pacman -S lua feh alacritty
 
 echo "Creating $HOME/.mizOS"
 if [ -d "$HOME/.mizOS" ]; then
@@ -27,6 +27,19 @@ fi
 echo "creating $HOME/.mizOS/src"
 mkdir $HOME/.mizOS/src
 
+
+
+echo "Installing custom neofetch."
+echo "Uninstalling normal neofetch, if it exists."
+sudo pacman -R neofetch
+
+if test -f "/usr/bin/neofetch"; then
+	echo "Custom neofetch already installed, removing."
+fi
+
+sudo rm /usr/bin/neofetch
+echo "Adding custom neofetch."
+sudo cp assets/neofetch /usr/bin
 
 echo "Adding that amazing wallpaper to /etc/mizOS/wallpaper"
 cp assets/mizOStree.png $HOME/.mizOS/wallpaper
