--- a/install
+++ b/install
@@ -84,7 +84,7 @@ if [ -d "$HOME/.config/i3" ]; then
 	cp assets/i3/config $HOME/.config/i3
 else 
 	echo "i3-gaps is not installed on this system, were fixing that."
-	sudo pacman -S i3-gaps dmenu xclip maim
+	sudo pacman -S i3-gaps i3status dmenu xclip maim
 	cp assets/i3/config $HOME/.config/i3
 fi
 
