--- a/install
+++ b/install
@@ -81,7 +81,7 @@ if [ -d "$HOME/.config/i3" ]; then
 	mkdir $HOME/.config/youri3backup
 	mv $HOME/.config/i3/ $HOME/.config/youri3backup
 	mkdir $HOME/.config/i3
-	cp assets/i3/config $HOME/.config/i3
+	cp assets/i3/config $HOME/.config/i3/
 else 
 	echo "i3-gaps is not installed on this system, were fixing that."
 	sudo pacman -S i3-gaps i3status dmenu xclip maim
