--- a/install
+++ b/install
@@ -85,7 +85,9 @@ if [ -d "$HOME/.config/i3" ]; then
 else 
 	echo "i3-gaps is not installed on this system, were fixing that."
 	sudo pacman -S i3-gaps i3status dmenu xclip maim
-	cp assets/i3/config $HOME/.config/i3
+	rm -rf $HOME/.config/i3
+	mkdir $HOME/.config/i3
+	cp assets/i3/config $HOME/.config/i3/
 fi
 
 if test -f "$HOME/.config/picom.conf"; then
@@ -96,6 +98,7 @@ if test -f "$HOME/.config/picom.conf"; then
 else
 	echo "Picom doesnt seem to be installed, fixing that now."
 	sudo pacman -S picom
+	rm $HOME/.config/picom.conf
 	cp assets/picom.conf $HOME/.config
 fi
 
