--- a/install
+++ b/install
@@ -46,7 +46,7 @@ sudo rm /usr/bin/neofetch
 echo "Adding custom neofetch."
 sudo cp assets/neofetch /usr/bin
 
-echo "Adding that amazing wallpaper to /etc/mizOS/wallpaper."
+echo "Adding that amazing wallpaper to $HOME/.mizOS/wallpaper."
 cp assets/mizOStree.png $HOME/.mizOS/wallpaper/
 
 if [ -d "$HOME/.mizOS/yay-git" ]; then
