--- a/install
+++ b/install
@@ -3,14 +3,14 @@
 thisDir=$(pwd)
 
 echo "Updating your current install to the latest packages."
-sudo pacman -Syu
+sudo -S pacman -Syu
 
 echo "Installing a few dependencies."
-sudo pacman -S lua feh alacritty asusctl supergfxctl steam
+sudo -S pacman -S lua feh alacritty asusctl supergfxctl steam
 
 echo "Enabling asusctl and supergfxctl."
-sudo systemctl enable --now power-profiles-daemon.service
-sudo systemctl enable --now supergfxd
+sudo -S systemctl enable --now power-profiles-daemon.service
+sudo -S systemctl enable --now supergfxd
 
 echo "Creating $HOME/.mizOS"
 if [ -d "$HOME/.mizOS" ]; then
@@ -36,15 +36,15 @@ mkdir $HOME/.mizOS/src
 
 echo "Installing custom neofetch."
 echo "Uninstalling normal neofetch, if it exists."
-sudo pacman -R neofetch
+sudo -S pacman -R neofetch
 
 if test -f "/usr/bin/neofetch"; then
 	echo "Custom neofetch already installed, removing."
 fi
 
-sudo rm /usr/bin/neofetch
+sudo -S rm /usr/bin/neofetch
 echo "Adding custom neofetch."
-sudo cp assets/neofetch /usr/bin
+sudo -S cp assets/neofetch /usr/bin
 
 echo "Adding that amazing wallpaper to $HOME/.mizOS/wallpaper."
 cp assets/mizOStree.png $HOME/.mizOS/wallpaper/
@@ -89,7 +89,7 @@ if [ -d "$HOME/.config/i3" ]; then
 	cp assets/i3/config $HOME/.config/i3/
 else 
 	echo "i3-gaps is not installed on this system, were fixing that."
-	sudo pacman -S i3-gaps i3status dmenu xclip maim
+	sudo -S pacman -S i3-gaps i3status dmenu xclip maim
 	rm -rf $HOME/.config/i3
 	mkdir $HOME/.config/i3
 	cp assets/i3/config $HOME/.config/i3/
@@ -102,7 +102,7 @@ if test -f "$HOME/.config/picom.conf"; then
 	cp assets/picom.conf $HOME/.config
 else
 	echo "Picom doesnt seem to be installed, fixing that now."
-	sudo pacman -S picom
+	sudo -S pacman -S picom
 	rm $HOME/.config/picom.conf
 	cp assets/picom.conf $HOME/.config
 fi
@@ -122,16 +122,16 @@ cp assets/alacritty.yml $HOME/.config/alacritty
 echo "Installing the miz script. finally!! :D"
 
 chmod +x assets/miz
-sudo cp assets/miz /usr/bin
+sudo -S cp assets/miz /usr/bin
 
 
 echo "Changing your os-release file."
-sudo rm /etc/os-release
-sudo cp assets/os-release /etc
+sudo -S rm /etc/os-release
+sudo -S cp assets/os-release /etc
 
 echo "Changing your lsb-release file."
-sudo rm /etc/lsb-release
-sudo cp assets/lsb-release /etc
+sudo -S rm /etc/lsb-release
+sudo -S cp assets/lsb-release /etc
 
 
 echo "My work here is done! You should probably reboot."
