--- a/install
+++ b/install
@@ -1,11 +1,14 @@
 #!/bin/bash
 
 
+
+
+
 echo "Updating your current install to the latest packages."
 sudo -S pacman -Syu
 
 echo "Installing a few dependencies."
-sudo -S pacman -S lua feh i3-gaps i3status dmenu xclip maim alacritty firefox neovim neofetch fish
+sudo -S pacman -S lua alacritty firefox neovim neofetch fish
 
 if [ -d "$HOME/.mizOS" ]; then
 	mv $HOME/.mizOS $HOME/mizOS
@@ -138,7 +141,9 @@ rm -rf /var/mizOS/backup/*
 echo "Cleaning old config files, if any."
 rm -rf /var/mizOS/config/*
 
-echo "mizOS is about to install configuration files for i3-gaps, picom, and alacritty. If you already have configuration files for these programs, they will be backed up to /var/mizOS/backup."
+echo -e "mizOS is about to install configuration files for several programs. If you already have configuration files for any of the programs listed below, they will be backed up to /var/mizOS/backup\n(i3-gaps)\n(hyprland)\n(picom)\n(fish)\n(alacritty)\n\n"
+
+echo -e "Backing up files\n\n"
 
 if [ -d "$HOME/.config/i3" ]; then
 	echo "Backing up current i3 configuration."
@@ -162,11 +167,32 @@ if [ -f "$HOME/.config/fish/config.fish" ]; then
 	mv $HOME/.config/fish/config.fish /var/mizOS/backup
 fi
 
-echo "Installing the i3 configuration file."
-mkdir $HOME/.config/i3
-cp assets/config/i3/config $HOME/.config/i3/
-cp -r assets/config/i3 /var/mizOS/config
+echo -e "\n\nBackup complete."
 
+
+function install_i3()
+{
+	sudo -S pacman -S i3-gaps i3status dmenu picom feh xclip maim
+
+	echo "Installing the i3 configuration file."
+	mkdir $HOME/.config/i3
+	cp assets/config/i3/config $HOME/.config/i3/
+	cp -r assets/config/i3 /var/mizOS/config
+
+	echo "Installing the picom configuration file."
+	cp assets/config/picom.conf $HOME/.config
+	cp assets/config/picom.conf /var/mizOS/config
+}
+
+echo -e "\n\n\nPlease select a user interface (desktop).\n"
+echo "Input the list number."
+echo "1 - i3-gaps [Xorg] (Compatible with Intel, AMD, and Nvidia GPUs)"
+echo "2 - None"
+printf "\n\n> "
+read dans
+if [ $dans == "1" ]; then
+	install_i3
+fi
 
 echo "Installing the Alacritty config file."
 mkdir $HOME/.config/alacritty
@@ -177,11 +203,6 @@ cp assets/config/alacritty.yml /var/mizOS/config/alacritty
 echo "Installing the fish configuration file."
 cp assets/config/config.fish $HOME/.config/fish
 cp assets/config/config.fish /var/mizOS/config
-
-echo "Installing the Picom configuration file."
-cp assets/config/picom.conf $HOME/.config
-cp assets/config/picom.conf /var/mizOS/config
-
 
 echo "Configuration files added."
 
